# zkevm-circuits

./: .dockerignore  .gitignore  .gitmodules  BENCH  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Config.toml  Dockerfile  EVM_PROVER  FAILED  LICENSE  LICENSE-BOSL  Makefile  Prover  README-old.md  README.md  STATE_PROVER  acc_committed.diff  build_pi_integration.sh  docker-compose.yml  dummy.txt  errors.txt  go.work  go.work.sum  onlyInHalo2TestBranch.txt  out.txt  rust-toolchain  rustfmt.toml
aggregator/: Cargo.toml  README.md  tests.sh
aggregator/configs/: compression_thin.config  compression_wide.config
aggregator/src/: aggregation.rs  barycentric.rs  batch.rs  blob.rs  chunk.rs  compression.rs  constants.rs  core.rs  lib.rs  param.rs  tests.rs  util.rs
bus-mapping/: .gitignore  Cargo.toml  README.md
bus-mapping/src/: bytecode.rs  circuit_input_builder.rs  constants.rs  error.rs  eth_types.rs  evm.rs  exec_trace.rs  external_tracer.rs  geth_errors.rs  geth_types.rs  l2_predeployed.rs  lib.rs  macros.rs  mock.rs  operation.rs  precompile.rs  public_input_builder.rs  rpc.rs  state_db.rs  statedb.rs  util.rs
circuit-benchmarks/: .gitignore  Cargo.toml  build.rs
circuit-benchmarks/examples/: pi_circuit_integration.rs  super_circuit_integration.rs
circuit-benchmarks/src/: bench_params.rs  bit_keccak.rs  bit_sha256.rs  bytecode_circuit.rs  constants.rs  copy_circuit.rs  evm_circuit.rs  exp_circuit.rs  keccak_permutation.rs  keccak_permutation_old.rs  lib.rs  mpt_circuit.rs  new_keccak.rs  packed_keccak.rs  packed_multi_keccak.rs  pi_circuit.rs  pi_circuit_with_verifier.rs  state_circuit.rs  super_circuit.rs  taiko_super_circuit.rs  tx_circuit.rs
eth-types/: Cargo.toml
eth-types/src/: .external_tracer.rs.swp  bytecode.rs  error.rs  eth_core.rs  evm_types.rs  geth_types.rs  keccak.rs  l2_types.rs  lib.rs  macros.rs  sign_types.rs  state_db.rs  third_party.rs  utils.rs
evm-testvectors/: Cargo.toml  Config.toml  ERRORS  code.cache  info  lllc.cache  loop.sh  pre_commit.sh  result.cache  test-docker-lllc.sh  test-docker.sh
evm-testvectors/src/: abi.rs  code_cache.rs  compiler.rs  config.rs  exec.rs  json.rs  lllc.cache  lllc.rs  main.rs  result_cache.rs  statetest.rs  statetest_yaml.rs  testme.rs  utils.rs  yaml.rs
external-tracer/: Cargo.toml
external-tracer/src/: lib.rs
gadgets/: Cargo.toml
gadgets/src/: batched_is_zero.rs  binary_number.rs  comparator.rs  comparison.rs  evm_word.rs  expression.rs  is_equal.rs  is_zero.rs  less_than.rs  less_than_vertical.rs  lib.rs  monotone.rs  mul_add.rs  permutation.rs  range.rs  util.rs
geth-utils/: Cargo.toml  README.md  build.rs  evm.patch  go.mod  go.sum  scroll.mod  scroll.sum
geth-utils/example/: add_sub.go  msize.go  mstore_mload.go  sstore_sload.go
geth-utils/gethutil/: asm.go  trace.go  util.go
geth-utils/l1geth/: go.mod  go.sum  lib.go  trace.go
geth-utils/l2geth/: asm.go  go.mod  go.sum  lib.go  trace.go  util.go
geth-utils/lib/: lib.go
geth-utils/src/: block.rs  lib.go  lib.rs  mpt.rs  trace.go
integration-tests/: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  run.sh  rustfmt.toml
integration-tests/contracts/: .gitignore  BENCHMARKS.sol  OpenZeppelinERC20TestToken.sol
integration-tests/src/: integration_public_data_circuits.rs  integration_test_circuits.rs  lib.rs  wcerrors.rs  worst_case.rs
integration-tests/tests/: circuit_input_builder.rs  circuits.rs  circuits_actual.rs  circuits_mock.rs  mainnet.rs  readme.md  rpc.rs  taiko_circuit_input_builder.rs  taiko_circuits.rs
integration-tests/tools/: print_tx_details.sh
ipc-verifier/: Cargo.toml
ipc-verifier/src/: main.rs
keccak256/: Cargo.toml
keccak256/benches/: bench_rho.rs
keccak256/src/: arith_helpers.rs  circuit.rs  common.rs  gate_helpers.rs  gates.rs  helpers.rs  keccak_arith.rs  lib.rs  permutation.rs  plain.rs  rlc.rs  table.rs
light-client-poc/: .gitignore  Cargo.toml  README.md  start-go-ethereum.sh  start_node.sh  test.sh  witness.txt
light-client-poc/go-ethereum-data/: boot.key  zklight.json
light-client-poc/src/: SimpleStorage.sol  circuit.rs  common.rs  contract.rs  lib.rs  main.rs  mainnet.rs  server.rs  transforms.rs  utils.rs  verifier.rs  witness.rs
light-client-poc/wasm/: .gitignore  Cargo.toml  index.html  run.sh
mock/: Cargo.toml
mock/src/: account.rs  anchor.rs  block.rs  lib.rs  sha3.rs  test_ctx.rs  test_ctx2.rs  trace.rs  transaction.rs  withdrawal.rs
mpt/: Cargo.toml
mpt-witness-generator/rustlib/: Cargo.toml  build.rs
mpt/src/: account_leaf.rs  account_leaf_key.rs  account_leaf_key_in_added_branch.rs  account_leaf_nonce_balance.rs  account_leaf_storage_codehash.rs  account_non_existing.rs  address_compr.rs  branch.rs  branch_acc.rs  branch_acc_init.rs  branch_hash_in_parent.rs  branch_key.rs  branch_parallel.rs  branch_rlc.rs  branch_rlc_init.rs  branch_rows.rs  columns.rs  extension_node.rs  extension_node_key.rs  hash_in_parent.rs  helpers.rs  key_compr.rs  leaf_hash.rs  leaf_key.rs  leaf_key_in_added_branch.rs  leaf_value.rs  lib.rs  mpt.rs  param.rs  proof_chain.rs  roots.rs  selectors.rs  storage_leaf.rs  storage_root_in_account_leaf.rs  witness_row.rs
mpt/tests/: AccountAddPlaceholderBranch.json  AccountAddPlaceholderExtension.json  AccountAfterFirstLevel.json  AccountBranchPlaceholder.json  AccountBranchPlaceholderDeeper.json  AccountBranchPlaceholderInFirstLevel.json  AccountDeletePlaceholderBranch.json  AccountDeletePlaceholderExtension.json  AccountExtensionInFirstLevel.json  AccountExtensionThreeNibblesInEvenLevel.json  AccountExtensionThreeNibblesInOddLevel.json  AccountExtensionTwoNibblesInEvenLevel.json  AccountInFirstLevel.json  AccountPlaceholderExtension.json  AddAccount.json  AddAccountPlaceholderExtension.json  AddBranch.json  Delete.json  (+126 more)
prover/: Cargo.toml
taiko-external-tracer/: Cargo.toml
testool/: .gitignore  Cargo.toml  Config.toml  Makefile  README.md  code.cache  codehash.txt  debug.sh  download_setup.sh  loop.sh  raw.sh  run.sh  run_in_docker.sh  test-docker.sh  test.sh
zkevm-circuits/: Cargo.toml
zktrie/: Cargo.toml
(+2205 files in other folders)
