[workspace]
members = [
    "zkevm-circuits",
    "bus-mapping",
    "geth-utils",
    "gadgets",
    "integration-tests",
    "circuit-benchmarks",
    "eth-types",
    "external-tracer",
    "mock",
    "testool",
    "mpt-witness-generator/rustlib",
    "light-client-poc",
    "light-client-poc/wasm"
]

[patch.crates-io]
halo2_proofs = { path = "/Users/adria0/w/ef/light_client/halo2/halo2_proofs"}

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { path = "/Users/adria0/w/ef/light_client/halo2/halo2_proofs"}

# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = true
