[workspace]
resolver = "2"
members = [
    "zkevm-circuits",
    "bus-mapping",
    "geth-utils",
    "gadgets",
    "integration-tests",
    "circuit-benchmarks",
    "eth-types",
    "external-tracer",
    "mock",
    "testool",
    "mpt-witness-generator/rustlib",
    "light-client-poc"
]

[patch.crates-io]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0" }

[patch."https://github.com/scroll-tech/halo2.git"]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0" }

[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { version = "0.1.0", features = ["derive_serde"] }

# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = true
