[package]
name = "aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eth-types = { path = "../eth-types" }
zkevm-circuits = { path = "../zkevm-circuits" }


ark-std = "0.3.0"
env_logger.workspace = true
ethers-core = { version = "2.0.7", features = ["scroll"] }
hex = "0.4.3"
log.workspace = true
itertools.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

halo2_proofs.workspace = true
snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", tag = "v0.1.5" }
snark-verifier-sdk = { git = "https://github.com/scroll-tech/snark-verifier", tag = "v0.1.5", default-features=false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }


[features]
default = [ ]
print-trace = [ "ark-std/print-trace" ]
# This feature is useful for unit tests where we check the SAT of pi aggregation circuit
disable_proof_aggregation = []
