[package]
name = "bus-mapping"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
keccak256 = { path = "../keccak256" }
mpt-zktrie = {path = "../zktrie"}
mock = { path = "../mock", optional = true }

ethers-core.workspace = true
ethers-signers.workspace = true
ethers-providers.workspace = true
halo2_proofs.workspace = true
hash-circuit.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
num.workspace = true
rand = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
hex.workspace = true
strum_macros.workspace = true

# precompile related crates
revm-precompile = { git = "https://github.com/scroll-tech/revm", branch = "scroll-fix" }
once_cell.workspace = true

[dev-dependencies]
hex.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true
url.workspace = true
ctor.workspace = true
env_logger.workspace = true
mock = { path = "../mock" }
rand.workspace = true

[features]
default = ["test"]
test = ["mock", "rand"]
scroll = ["eth-types/scroll", "mock?/scroll"]
# Enable shanghai feature of mock only if mock is enabled (by test).
shanghai = ["eth-types/shanghai", "mock?/shanghai"]
