[package]
name = "bus-mapping"
version = "0.1.0"
edition = "2021"
authors = ["CPerezz <c.perezbaro@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
mock = { path = "../mock", optional = true }

ethers-core = "2.0.7"
ethers-providers = "2.0.7"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features=["circuit-params"], branch = "feat/serde_vk" }
itertools = "0.10"
lazy_static = "1.4"
log = "0.4.14"
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"
strum = "0.24"
strum_macros = "0.24"

revm-precompile = "2.0.2"

[dev-dependencies]
hex = "0.4.3"
pretty_assertions = "1.0.0"
tokio = { version = "1.13", features = ["macros"] }
url = "2.2.2"
mock = { path = "../mock" }

[features]
test = ["mock"]
