[package]
name = "circuit-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs.workspace = true
ark-std = { version = "0.3" }
zkevm-circuits = { path = "../zkevm-circuits", features = ["test"]}
keccak256 = { path = "../keccak256" }
bus-mapping = { path = "../bus-mapping",  features = ["test"] }
rand_xorshift = "0.3"
rand = "0.8"
itertools.workspace = true
eth-types = { path = "../eth-types" }
env_logger.workspace = true
log="0.4"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
ethers-signers = "2.0.7"
ethers = { version = "2.0.7", features = ["ethers-solc"] }
mock = { path="../mock" }
rand_chacha = "0.3"
url="2.2.2"

[features]
default = []
benches = []
scroll = ["bus-mapping/scroll", "eth-types/scroll", "mock/scroll", "zkevm-circuits/scroll"]
print-trace = ["ark-std/print-trace"]
