[package]
name = "circuit-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs.workspace = true
ark-std.workspace = true
zkevm-circuits = { path = "../zkevm-circuits", features = ["test"]}
keccak256 = { path = "../keccak256" }
bus-mapping = { path = "../bus-mapping",  features = ["test"] }
rand_xorshift.workspace = true
rand.workspace = true
itertools.workspace = true
eth-types = { path = "../eth-types" }
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
ethers-signers.workspace = true
ethers.workspace = true
mock = { path="../mock" }
rand_chacha.workspace = true
url.workspace = true

[features]
default = []
benches = []
scroll = ["bus-mapping/scroll", "eth-types/scroll", "mock/scroll", "zkevm-circuits/scroll"]
print-trace = ["ark-std/print-trace"]
