[package]
name = "circuit-benchmarks"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { path = "/Users/adria0/w/ef/light_client/halo2/halo2_proofs"}
ark-std = { version = "0.3", features = ["print-trace"] }
zkevm-circuits = { path = "../zkevm-circuits", features = ["test-circuits"] }
bus-mapping = { path = "../bus-mapping",  features = ["test"] }
rand_xorshift = "0.3"
rand = "0.8"
itertools = "0.10"
eth-types = { path = "../eth-types" }
env_logger = "0.9"
ethers-signers = "2.0.7"
mock = { path="../mock" }
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
benches = []
