[package]
name = "eth-types"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
ethers-core = "2.0.7"
ethers-signers = "2.0.7"
hex = "0.4"
lazy_static = "1.4"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", features=["circuit-params"], branch = "feat/serde_vk" }
regex = "1.5.4"
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"
serde_with = "1.12"
uint = "0.9.1"
itertools = "0.10"
libsecp256k1 = "0.7"
subtle = "2.4"
num = "0.4"
num-bigint = { version = "0.4" }
strum_macros = "0.24"
strum = "0.24"

[features]
warn-unimplemented = []
