[package]
name = "evm-testvectors"
description="tools for executing the common ethereum tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bus-mapping = { path = "../bus-mapping" }
eth-types = { path="../eth-types" }
external-tracer = { path="../external-tracer" }
zkevm-circuits = { path="../zkevm-circuits" }
keccak256 = { path = "../keccak256" }
ethers-core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
yaml-rust = "0.4.5"
regex = "1"
anyhow = "1"
once_cell = "1.10"
k256 = "0.9"
log = "0.4"
thiserror = "1.0"
env_logger = "0.9"
pairing_bn256 = { git = "https://github.com/appliedzkp/pairing" }
mock = { path = "../mock" }
glob = "0.3"
rayon = "1.5"
prettytable-rs = "0.8"
clap = { version = "3.1", features = ["derive"] }
ethers-signers = "0.6"

[features]
ignore-test-docker = []
