[package]
name = "external-tracer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eth-types = { path = "../eth-types" }
geth-utils = { path = "../geth-utils" }
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"
log.workspace = true

[features]
default = []
scroll = ["eth-types/scroll", "geth-utils/scroll"]
