[package]
name = "external-tracer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eth-types = { path = "../eth-types" }
geth-utils = { path = "../geth-utils" }
serde.workspace = true
serde_json.workspace = true
log.workspace = true

[features]
default = []
scroll = ["eth-types/scroll", "geth-utils/scroll"]
