[package]
name = "geth-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[build-dependencies]
gobuild = "0.1.0-alpha.1"
glob = "0.3.1"

[dev-dependencies]
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"

[dependencies]
eth-types = { path = "../eth-types" }
ethers = "2.0"
num_enum = "0.7.0"
serde = "1.0.188"
serde_json = "1.0.105"
