[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
ethers = { version = "2.0.7", features = ["ethers-solc"] }
serde_json = { version = "1.0.66", features = ["unbounded_depth"]}
serde = { version = "1.0.130", features = ["derive"] }
bus-mapping = { path = "../bus-mapping" , features = ["test"] }
eth-types = { path = "../eth-types" }
zkevm-circuits = { path = "../zkevm-circuits", features = ["test-circuits"] }
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"
pretty_assertions = "1.0.0"
log = "0.4.14"
env_logger = "0.9"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
rand_chacha = "0.3"
paste = "1.0"
rand_xorshift = "0.3.0"
rand_core = "0.6.4"
mock = { path = "../mock" }
home = "0.5.5"
semver = "1.0.18"
thiserror = "1.0.44"
glob = "0.3.1"

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
default = []
rpc = []
circuit_input_builder = []
circuits = []
mock_prover = []
