[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static.workspace = true
ethers.workspace = true
serde_json.workspace = true
serde.workspace = true
bus-mapping = { path = "../bus-mapping", features = ["test"] }
eth-types = { path = "../eth-types" }
zkevm-circuits = { path = "../zkevm-circuits", default-features = false, features = ["test", "test-circuits","shanghai","debug-annotations"] }
tokio.workspace = true
url.workspace = true
pretty_assertions.workspace = true
log.workspace = true
env_logger.workspace = true
halo2_proofs.workspace = true
hex.workspace = true
strum.workspace = true
rand_chacha.workspace = true
paste = "1.0"
rand_xorshift.workspace = true
rand_core = "0.6.4"
mock = { path = "../mock" }

[features]
default = ["circuits"]
rpc = []
circuit_input_builder = []
circuits = []
mock_prover = []
scroll= ["bus-mapping/scroll", "eth-types/scroll", "mock/scroll", "zkevm-circuits/scroll"]
