[package]
name = "keccak256"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
itertools = "0.10.1"
num-bigint = "0.4.2"
num-traits = "0.2.14"
plotters = { version = "0.3.0", optional = true }
eth-types = { path = "../eth-types" }
lazy_static = "1.4"

[dev-dependencies]
pretty_assertions = "1.0"
rand = "0.8"
