[package]
name = "keccak256"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs.workspace = true
itertools.workspace = true
num-bigint = "0.4.2"
num-traits = "0.2.14"
plotters = { version = "0.3.0", optional = true }
eth-types = { path = "../eth-types" }
lazy_static.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
pretty_assertions = "1.0"
rand = "0.8"
