[package]
name = "keccak256"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs.workspace = true
itertools.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
plotters = { version = "0.3.0", optional = true }
eth-types = { path = "../eth-types" }
lazy_static.workspace = true
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rand.workspace = true
