[package]
name = "light-client-poc"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "web3_cache"
path = "bin/web3_cache/main.rs"

[[bin]]
name = "test_mainnet"
path = "bin/test_mainnet/main.rs"
required-features= [ "prover", "disable-keccak" ]

[[bin]]
name = "test_local"
path = "bin/test_local/main.rs"
required-features = [ "prover", "disable-keccak" ]

[[bin]]
name = "gen_wasm_inputs"
path = "bin/gen_wasm_inputs/main.rs"
required-features = [ "prover", "disable-keccak" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zkevm-circuits = { path = "../zkevm-circuits", features=["test-circuits"] }
reqwest = { version = "0.11.18" }
tokio = { version= "1.28.2", features = ["macros", "rt-multi-thread"]  }
mpt-witness-generator = { path = "../mpt-witness-generator/rustlib" }
ethers ={ version = "2.0.10", features = ["abigen", "rustls", "ws", "ethers-solc"]}
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets"}
rand_chacha = { version = "0.3.1"}
rand = { version="0.8.5" }
ark-std = { version = "0.4.0" }
hyper = { version = "0.14.27", features= ["full"]}
futures-util = "0.3.28"
hyper-rustls = { version = "0.24.1"}
halo2_proofs = { path = "/Users/adria0/w/ef/light_client/halo2/halo2_proofs", features = ["circuit-params"]}
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2", features=["derive_serde"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
halo2_proofs= { path = "/Users/adria0/w/ef/light_client/halo2/halo2_proofs", default-features=false}

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
eyre = { version  = "0.6.8" }
hex = "0.4.3"
num_enum = "0.6.1"
env_logger = "0.9"
futures = "0.3.28"
lazy_static = "1.4.0"
flate2 = "1.0.28"
base64 = "0.21.4"
bitcode = "0.5.0"
ciborium = "0.2.1"
bincode = "1.3.3"

[dev-dependencies]
ctor = "0.1.22"

[features]
default = [ "prover", "disable-keccak" ]
disable-keccak = []
prover = []
