[package]
name = "mock"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eth-types = { path = "../eth-types" }
external-tracer = { path = "../external-tracer" }
lazy_static.workspace = true
itertools.workspace = true
ethers-signers.workspace = true
ethers-core.workspace = true
rand_chacha.workspace = true
rand.workspace = true
log.workspace = true

[features]
default = []
shanghai = ["eth-types/shanghai"]
scroll = ["eth-types/scroll", "external-tracer/scroll"]
