[package]
name = "mock"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
halo2_proofs = { git = "https://github.com/taikoxyz/halo2.git", features = [
  "circuit-params",
], tag = "v0.0.1" }
eth-types = { path = "../eth-types" }
external-tracer = { path = "../external-tracer" }
lazy_static = "1.4"
itertools = "0.10.3"
ethers-signers = "=2.0.0"
ethers-core = "=2.0.0"
rand_chacha = "0.3"
rand = "0.8"
sha3 = "0.10"
num-bigint = { version = "0.4" }
num = "0.4"
libsecp256k1 = "0.7"
once_cell = "1.17.1"
