[package]
name = "mpt"
version = "0.1.0"
edition = "2018"

[dependencies]
halo2_proofs = { git = "https://github.com/appliedzkp/halo2.git", tag = "v2022_03_06" }
itertools = "0.10.1"
num-bigint = "0.4.2"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keccak256 = { path = "../keccak256"}
pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256" }
rand_xorshift = "0.3"
ark-std = { version = "0.3", features = ["print-trace"] }

