[package]
name = "mpt"
version = "0.1.0"
edition = "2018"

[dependencies]
halo2_proofs = { version = "0.1.0-beta.1" }
itertools = "0.10.1"
num-bigint = "0.4.2"
num-traits = "0.2.14"
plotters = { version = "0.3.0", optional = true }
eth-types = { path = "../eth-types" }
lazy_static = "1.4"
keccak256 = { path = "../keccak256"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

