[package]
name = "prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bus-mapping = { path = "../bus-mapping"}
env_logger = "0.9.0"
ethers-providers = "0.6"
eth-types = { path = "../eth-types" }
hyper = { version = "0.14.16", features = ["server"] }
rand_xorshift = "0.3"
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0607" }
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
strum = "0.24"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
zkevm-circuits = { path = "../zkevm-circuits", features = ["test"] }
