[package]
name = "prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
halo2_proofs.workspace = true

aggregator = { path = "../aggregator" }
bus-mapping = { path = "../bus-mapping" }
eth-types = { path = "../eth-types" }
mpt-zktrie = { path = "../zktrie" }
zkevm-circuits = { path = "../zkevm-circuits", default-features = false }

snark-verifier.workspace = true
snark-verifier-sdk.workspace = true

anyhow.workspace = true
base64 = "0.13.0"
blake2 = "0.10.3"
chrono = "0.4.19"
dotenvy = "0.15.7"
ethers-core.workspace = true
git-version = "0.3.5"
hex.workspace = true
itertools.workspace = true
log.workspace = true
log4rs = { version = "1.2.0", default_features = false, features = ["console_appender", "file_appender"] }
num-bigint.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_xorshift.workspace = true
serde.workspace = true
serde_derive = "1.0"
serde_json = { workspace = true, features = ["unbounded_depth"] }
serde_stacker = "0.1"
sha2 ="0.10.2"

[features]
default = []
parallel_syn = ["halo2_proofs/parallel_syn", "zkevm-circuits/parallel_syn"]
scroll = ["bus-mapping/scroll", "eth-types/scroll", "zkevm-circuits/scroll"]
shanghai = ["bus-mapping/shanghai", "eth-types/shanghai", "zkevm-circuits/shanghai"]
test = []
