[package]
name = "taiko-external-tracer"
version = "0.1.0"
edition = "2021"
authors = ["The appliedzkp team"]
license = "MIT OR Apache-2.0"

[dependencies]
eth-types = { path = "../eth-types" }
taiko-geth-utils = { path = "../taiko-geth-utils" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"
